correction mobile about

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -397,11 +397,13 @@ main {
     main .lg-heading {
       line-height: 1;
       margin-bottom: 1rem; }
-  ul.menu-nav, div.menu-branding {
+  ul.menu-nav,
+  div.menu-branding {
     float: none;
     width: 100%;
     min-height: 0; }
-    ul.menu-nav.show, div.menu-branding.show {
+    ul.menu-nav.show,
+    div.menu-branding.show {
       transform: translate3d(0, 0, 0); }
   .menu-nav {
     height: 75vh;
@@ -415,7 +417,7 @@ main {
       width: 150px;
       height: 150px; }
   .about-info {
-    grid-template-areas: 'bioimage' 'bio' 'bio' 'bio2' 'job1' 'job2' 'job3' 'bio3' 'studies1' 'studies2' 'studies3';
+    grid-template-areas: "bioimage" "bio" "bio1" "bio2" "job1" "job2" "job3" "bio3" "studies1" "studies2" "studies3";
     grid-template-columns: 1fr; }
   .projects {
     grid-template-columns: repeat(2, 1fr); }
